--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -74,20 +74,21 @@ services:
       # TODO: maybe make some of these :ro? More strict, we catch errors earlier?
       # SSL files
       - ./irods/icat/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
-      # Patch so we setup_irods.py doesn't re-create tables
+      # patch so setup_irods.py doesn't re-create tables
       - ./irods/patch/setup_irods_already_installed_dev.patch:/opt/irods/patch/setup_irods_already_installed_dev.patch
+      # icat's bootstrap.sh (to be called by init.sh)
+      - ./externals/dh-irods/icat/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       # icat's hooks for development
       - ./irods/icat/hooks/:/opt/irods/hooks/
-      # To mock surfsara operations (?)
+      # mock surfsara operations (?)
       - ./irods/icat/DMFS:/opt/irods/DMFS
-      # To mock users
+      # mock users
       - ./keycloak/users.json:/opt/irods/users.json
       # repos
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       # goes away with 4.2.11 (genqury patch)
       - ./externals/dh-irods/icat/patch/genquery.py:/etc/irods/genquery.py
-      - ./externals/dh-irods/icat/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       # shared across containers (TODO: move this to Dockerfile, and eventually to staged-build Dockerfile)
       - microservices-build:/tmp/microservices-build
       - /etc/localtime:/etc/localtime:ro
@@ -138,10 +139,9 @@ services:
     volumes:
       # SSL files
       - ./irods/ires-hnas/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
-      # Patch so setup_irods.py in development doesn't re-create a resource if already exists
+      # patch so setup_irods.py in development doesn't re-create a resource if already exists
       - ./irods/patch/setup_irods_already_installed_dev.patch:/opt/irods/patch/setup_irods_already_installed_dev.patch
-      - ./irods.secrets.cfg:/etc/secrets:ro
-      # hnas's bootstrap.sh
+      # hnas's bootstrap.sh (to be called by init.sh)
       - ./externals/dh-irods/ires-hnas/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       # hnas's hooks for development
       - ./irods/ires-hnas/hooks/:/opt/irods/hooks/
@@ -149,6 +149,8 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      # irods-helper-cmd uses /etc/secrets
+      - ./irods.secrets.cfg:/etc/secrets:ro
       # emulated physical resources
       - ./staging-data/zones:/mnt/ingest/zones
       - ./staging-data/direct-ingest:/mnt/stagingResc01
@@ -234,11 +236,12 @@ services:
     depends_on:
       - minio1
     environment:
-      RIT_ENV: dev
-      ENV_IRODS_SSL_CERT: /etc/irods/SSL/ires-ceph-ac.dh.local.crt
-      ENV_IRODS_SSL_KEY: /etc/irods/SSL/ires-ceph-ac.dh.local.key
-      ENV_IRODS_SSL_DH_PARAMS: /etc/irods/SSL/dhparams.pem
-      ENV_IRODS_SSL_CA_CERFICATE: /etc/irods/SSL/test_only_dev_irods_dh_ca_cert.pem
+      # Name of SSL-related files expected in /opt/irods_ssl_staging/ (volume mapped)
+      ENV_IRODS_SSL_CERT: ires-ceph-ac.dh.local.crt
+      ENV_IRODS_SSL_KEY: ires-ceph-ac.dh.local.key
+      ENV_IRODS_SSL_DH_PARAMS: dhparams.pem
+      # defaults to '/etc/ssl/certs/ca-certificates.crt' (in the container)
+      ENV_IRODS_SSL_CA_CERTIFICATE: test_only_dev_irods_dh_ca_cert.pem
       # Yet another work around :( READ corresponding entry comment in ires-ceph-gl
       S3_AUTH_FILE: /var/lib/irods/minio.keypair
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
@@ -249,15 +252,23 @@ services:
       ENV_FILEBEAT_SECONDARY_TAG: IRES_UM04
       VIRTUAL_HOST: ires-ceph-ac.${RIT_ENV}.rit.unimaas.nl
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./irods.secrets.cfg:/etc/secrets:ro
+      # SSL files
+      - ./irods/ires-s3/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
+      # patch so we setup_irods.py doesn't re-create tables
+      - ./irods/patch/setup_irods_already_installed_dev.patch:/opt/irods/patch/setup_irods_already_installed_dev.patch
+      # ires-s3's bootstrap.sh (to be called by init.sh)
+      - ./externals/dh-irods/ires-s3/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
+      # ires-s3's hooks for development
+      - ./irods/ires-s3/hooks/:/opt/irods/hooks/
+      # repos
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      # irods-helper-cmd uses /etc/secrets
+      - ./irods.secrets.cfg:/etc/secrets:ro
+      # shared across containers (TODO: move this to Dockerfile, and eventually to staged-build Dockerfile)
       - microservices-build:/tmp/microservices-build
-      - ./externals/dh-irods/ires-s3/test-dev-ssl-certs/:/opt/certificates:ro
-      - ./externals/dh-irods/ires-s3/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
-      - ./externals/dh-irods/ires-s3/scripts/bootstrap_irods.sh:/opt/irods/bootstrap_irods.sh
+      - /etc/localtime:/etc/localtime:ro
     networks:
       default:
         aliases:
