--- a/mdr.env
+++ b/mdr.env
@@ -31,6 +31,7 @@ ELASTIC_PORT=9200
 DH_MAILER_HOST=mailer.dh.local
 DH_MAILER_USERNAME=user
 DH_MAILER_PASSWORD=password
+EMAIL_HOST=placeholder.nl
 
 # External applications
 DISQOVER_URL=https://disqover.datahubmaastricht.nl/
