PoC: Add "is ready" script for iCAT
In dev, the definition of "ready" changes, as we expect more things.

[DHDO-765]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -90,6 +90,8 @@ services:
       - ./externals/dh-irods/icat/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
       # icat's hooks for development
       - ./irods/icat/hooks/:/opt/irods/hooks/
+      # icat's development definition of being ready
+      - ./irods/icat/dh_is_ready:/dh_is_ready
       # mock surfsara operations (?)
       - ./irods/icat/DMFS:/opt/irods/DMFS
       # mock users
