Update S3 credential logic for cacheless_detached [DHS-2433]

--- a/.env
+++ b/.env
@@ -73,6 +73,8 @@ ENV_S3_SECRET_KEY1=ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNO
 ENV_S3_ACCESS_KEY2=BCDEFGHIJKLMNOPQRSTU
 ENV_S3_SECRET_KEY2=BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
 ENV_S3_AUTH_FILE=/var/lib/irods/minio.keypair
+ENV_S3_AUTH_FILE1=/var/lib/irods/minio1.keypair
+ENV_S3_AUTH_FILE2=/var/lib/irods/minio2.keypair
 
 # EPICPID for iRODS-ruleset
 ENV_EPICPID_URL=http://epicpid.dh.local/epic/21.T12996/
