--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -451,26 +451,26 @@ services:
         aliases:
           - ires-ceph-gl.dh.local
   minio1:
-    image: minio/minio:RELEASE.2019-05-23T00-29-34Z
+    image: minio/minio:RELEASE.2023-01-12T02-06-16Z
     environment:
       VIRTUAL_HOST: minio1.${RIT_ENV}.rit.unimaas.nl
       MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
     entrypoint: sh
-    command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
+    command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
     profiles: ["backend","full"]
     networks:
       default:
         aliases:
           - minio1.dh.local
   minio2:
-    image: minio/minio:RELEASE.2019-05-23T00-29-34Z
+    image: minio/minio:RELEASE.2023-01-12T02-06-16Z
     environment:
       VIRTUAL_HOST: minio2.${RIT_ENV}.rit.unimaas.nl
       MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
     entrypoint: sh
-    command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
+    command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
     profiles: ["backend","full"]
     networks:
       default:
