Add keycloak dh_is_ready.sh
In an attempt to (po)orchestrate our dev containers.

[DHDO-765]

--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -2,3 +2,10 @@ FROM jboss/keycloak:15.0.2
 
 USER root
 RUN microdnf update -y && microdnf install -y jq
+
+# /dh_is_ready.sh will print if container is ready for us or not
+# (hacky and cheap "orchestration")
+ADD ./dh_is_ready.sh /dh_is_ready.sh
+
+
+# Entry point: jboss/keycloak will call scripts under /opt/jboss/startup-scripts/
